fixed the sidebar being not tall enough on mobile

--- a/style.css
+++ b/style.css
@@ -1469,6 +1469,10 @@ body.light .whatdoievencallthis {
     	border-radius: 6px
           }
 			.whatdoievencallthis {
-		width: 100%
+		width: 100
+			}
+.sidebar {
+	max-height: unset
+}
 	}
   
